Improve feed management page
